# metacpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ast/: CMakeLists.txt  clang.hpp  compile_info.cpp  parse.cpp
astlib/: CMakeLists.txt  clang.hpp  compile_info.cpp  parse.cpp
cmake/: metacpp-config.cmake.in
include/metacpp/: ast.hpp  config.hpp.in  meta.hpp  plugin.hpp  refl.hpp  serial.hpp
plugin/: CMakeLists.txt  plugin.cpp
refl/: CMakeLists.txt  make_meta.hpp  refl.cpp  tool.cpp
test/: CMakeLists.txt  example.cpp  example.h  loader.cpp  test-other.hpp  test.cpp  test.hpp
test/include/test/: example.h
